# Fundamental-Algorithms-2025

./: .gitignore  add_directories.sh
debug/: assert_base.h
lab1/task1/: .clang-format  CMakeLists.txt  main.c
lab1/task1/.cache/clangd/index/: main.c.9C887A10E37FEE30.idx  main.h.53CCD6B4B28133F0.idx
lab1/task1/include/: functions.h  main.h
lab1/task1/src/: functions.c  main.c
lab1/task1/tests/: unit.c
lab1/task2/: CMakeLists.txt  main.c
lab1/task2/include/: functions.h
lab1/task2/include/primes/: functions.h
lab1/task2/src/: functions.c
lab1/task2/tests/: unit.c
lab1/task3/: CMakeLists.txt  main.c
lab1/task3/include/: functions.h
lab1/task3/src/: functions.c
lab1/task3/tests/: unit.c
lab1/task4/: CMakeLists.txt  main.c
lab1/task4/include/: constants.h  functions.h
lab1/task4/include/approximate_values/: constants.h  functions.h
lab1/task4/src/: constants.c  functions.c
lab1/task4/tests/: unit.c
